--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   font-size: 28px;
   width: 100vw;
   height: 100vh;
-
+  overflow-x: hidden;
 }
 
 h1{
@@ -108,7 +108,7 @@ h1{
   position: absolute;
   bottom: -700px;
   left: 25px;
-  z-index: 15;
+  z-index: 25;
   padding: 5px;
   width: min-content;
   height: min-content;
@@ -122,11 +122,17 @@ h1{
   left: 15px;
   top: 150px;
   z-index: 10;
+  width: 300px;
+  height: 300px;
 }
 
-#youtube {
-      width: 300px;
-      height: 300px;
+#vids2{
+  position: absolute;
+  right: 15px;
+  bottom: -925px;
+  z-index: 25;
+  width: 350px;
+  height: 300px;
 }
 
 #sc1 {
@@ -155,13 +161,15 @@ h1{
     #vids{
       position: fixed;
       left: 625px;
-      top: 100px;
+      top: 90px;
       z-index: 11;
+      width: 800px;
+      height: 800px;
     }
 
-    #youtube{
-        width: 800px;
-        height: 800px;
+    #vids2{
+      width: 500px;
+      height: 500px;
     }
 
     #artistSpotlight{
@@ -188,7 +196,7 @@ h1{
 
     #sc2 {
       position: absolute;
-      top: 150px;
+      top: 140px;
       left: 50px;
       z-index: 20;
       width: 400px;
@@ -197,31 +205,34 @@ h1{
 
 
     @media (min-width: 1800px){
+
       #vids{
         position: fixed;
-        left: 1000px;
+        left: 900px;
         top: unset;
         bottom: 5px;
         z-index: 20;
+        width: 1500px;
+        height: 1250px;
       }
-  
-      #youtube{
-          width: 1225px;
-          height: 1225px;
+      
+      #vids2{
+        width: 800px;
+        height: 800px;
       }
-  
+
       #artistSpotlight{
         position: fixed;
         bottom: 50px;
         right: unset;
-        left: 875px;
+        left: 775px;
         z-index: 10;
       }
   
       #today {
         right: 50px;
         font-size: 30px;
-        z-index: 10;
+        z-index: 20;
       }
   
       #sc1 {
@@ -237,8 +248,8 @@ h1{
         top: 300px;
         left: 125px;
         z-index: 20;
-        width: 600px;
-        height: 750px;
+        width: 500px;
+        height: 775px;
       }
     
   }
