--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,28 @@ body {
   font-family: â€œHelvetica Neueâ€, Helvetica, Arial, sans-serif;
   background-color: rgba(67, 91, 18, 0.544);
   font-size: 28px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
 h1{
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 75px;
+  letter-spacing: -1.6px;
+  word-spacing: -0.2px;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: line-through solid rgb(68, 68, 68);
+  font-variant: normal;
+  text-transform: lowercase;
+  z-index: 20;
+  margin-left: 10px;
+}
+
+h2 {
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-size: 30px;
   letter-spacing: -1.6px;
   word-spacing: -0.2px;
   color: #000000;
@@ -106,7 +120,7 @@ h1{
 #artistSpotlight{
   background-color: rgb(136, 100, 22);
   position: absolute;
-  bottom: -645px;
+  top: 850px;
   left: 25px;
   z-index: 25;
   padding: 5px;
@@ -128,7 +142,7 @@ h1{
 #vids2{
   position: absolute;
   right: 5px;
-  bottom: -1000px;
+  top: 1275px;
   z-index: 25;
   width: 375px;
   height: 375px;
@@ -136,7 +150,7 @@ h1{
 
 #sc1 {
   position: absolute;
-  bottom: -600px;
+  top: 900px;
   right: 10px;
   z-index: 3;
   width: 275px;
@@ -145,7 +159,7 @@ h1{
 
 #sc2 {
   position: absolute;
-  bottom: -225px;
+  top: 475px;
   left: 15px;
   z-index: 5;
   width: 270px;
@@ -154,26 +168,46 @@ h1{
 
 #tv_icon:hover {
   cursor: zoom-in;
-  }
+}
+
+#discord{
+  width: 245px;
+  height: 275px;
+  position: absolute;
+  top: 1675px;
+  left: 35px;
+  z-index: 20;
+}
+
+#twitter{
+  position: absolute;
+  top: 1665px;
+  right: 25px;
+  z-index: 20;
+}
 
   @media (min-width: 1150px){
+    h2{
+      font-size: 40px;
+    }
+
     #vids{
       position: fixed;
       left: 625px;
-      top: 90px;
+      top: 35px;
       z-index: 11;
-      width: 800px;
-      height: 800px;
+      width: 900px;
+      height: 900px;
     }
 
     #vids2{
+      top: 1000px;
       right: 50px;
       width: 500px;
       height: 500px;
     }
 
     #artistSpotlight{
-      position: fixed;
       bottom: 50px;
       top: unset;
       left: 525px;
@@ -182,9 +216,10 @@ h1{
     }
 
     #today {
+      top: 275px;
       right: 50px;
-      font-size: 30px;
-      z-index: 10;
+      font-size: 20px;
+      z-index: 15;
     }
 
     #sc1 {
@@ -204,6 +239,14 @@ h1{
       height: 750px;
     }
 
+    #twitter{
+      right: unset;
+      top: 1625px;
+      left: 200px;
+      width: 200px;
+      height: 200px;
+    
+    }
 
     @media (min-width: 1800px){
 
@@ -218,19 +261,23 @@ h1{
       }
       
       #vids2{
+        top: 1350px;
         width: 800px;
         height: 800px;
       }
 
       #artistSpotlight{
-        position: fixed;
         bottom: 50px;
+        top: unset;
+        z-index: 10;
+        font-size: 20px;
         right: unset;
         left: 775px;
         z-index: 10;
       }
   
       #today {
+        top: 350px;
         right: 50px;
         font-size: 24px;
         z-index: 20;
@@ -238,8 +285,8 @@ h1{
   
       #sc1 {
         position: absolute;
-        bottom: -600px;
-        left: 150px;
+        top: 1100px;
+        left: 200px;
         width: 400px;
         height: 400px;
       }
@@ -251,6 +298,14 @@ h1{
         z-index: 20;
         width: 500px;
         height: 775px;
+      }
+
+      #twitter{
+        right: unset;
+        top: 1625px;
+        left: 200px;
+        width: 200px;
+        height: 200px;
       }
     
   }
